Version 1.5.0:
	Fixed bug with XHTML plugin not wrapping inline nodes in paragraphs.
		- Thanks to @Heart1010 for reporting

Version 1.4.6:
	Fixed resize issue with Android browsers.
		- Thanks to @scripple for fixing.
	Fixed bug with table being turned into paragraphs.
		- Thanks to @jetand for fixing.
	Refactored the code so that it's in modules.
		The code is now much more readable and far easier to maintain and test.
		This change is 100% backwards compatible with the minified version and
		running the build will also create a backwards compatible non-minified
		version.
		The non-minified non-built code will require an AMD module loader to
		load it.
	Refactored all the unit tests for the new modules.
	Added manual tests.
	Fixed bug with RangeHelper.getOuterText() in IE < 9 when getting text after
	Fixed bug with RangeHelper.insertNode() in IE < 9 when inserting a documentFragment
	Fixed bug with dom.extractContents() method moving extracted element
		children into the returned documentFragment
	Fixed bug with valueChanged event causing an error if the editor is
		destroyed before it has finished its checks.
	Enabled valueChanged on sourceMode.
	Updated the Brazilian Portuguese translation.
		- Thanks to @martec
	Fixed HTML to BBCode newline handling causing extra newlines to be added.
		- Thanks to @jetand for reporting.
	Added SaurceLabs integration to automatically run QUnit tests in multiple
		browsers.
	Added undo plugin.
		- Thanks to @brunoais for creating.
	Added galician and catalan translations and updated Spanish translation.
		- Thanks to @FranSobrino for translating.
	Fixed bug with FF causing newline to appear when something is typed.
		- Thanks to @q2apro for reporting.
	Fixed bug with spaces sometimes disappearing from pasted text when using the
		XHTML plugin.
		- Thanks to @q2apro for reporting.
	Fixed issue with YouTube not showing fullscreen button inside the editor.
		- Thanks to @kron-1 for reporting.